--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hardhat Backend for Amazon Clone Web 3.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test"
   },
   "author": "Nirmalya Nayak",
   "license": "ISC",
